<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/applicationTitleLabel"
        android:id="@+id/applicationTitleLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:focusableInTouchMode="false"
        android:textColor="#070707" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_marginTop="101dp"
        android:width="250dp"
        android:hint="@string/userNameLabel"
        android:textAlignment="center"
        android:layout_below="@+id/applicationTitleLabel"
        android:layout_alignLeft="@+id/passWord"
        android:layout_alignStart="@+id/passWord"
        android:textColor="#070707" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passWord"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:width="250dp"
        android:hint="@string/passWordLabel"
        android:textAlignment="center"
        android:textColor="#090909" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonText"
        android:id="@+id/loginButton"
        android:textColor="#090909"
        android:layout_below="@+id/passWord"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountButtonText"
        android:id="@+id/createAccountButton"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:textColor="#060606" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/errorMessageTextLabel"
        android:visibility="invisible"
        android:layout_below="@+id/createAccountButton"
        android:layout_marginTop="31dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
