<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".TabMenuManagerActivity$PlaceholderFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAContentButtonTextLabel"
        android:layout_marginTop="21dp"
        android:id="@+id/editButton"
        android:layout_below="@+id/contentManagerTextLabel"
        android:layout_alignRight="@+id/viewerSpinner"
        android:layout_alignEnd="@+id/viewerSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contentManagerTextLabel"
        android:id="@+id/contentManagerTextLabel"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/viewerSpinner"
        android:layout_alignEnd="@+id/viewerSpinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/viewersTextLabel"
        android:id="@+id/viewerTextLabel"
        android:layout_below="@+id/editButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewerSpinner"
        android:layout_alignTop="@+id/viewerTextLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/viewerTextLabel"
        android:layout_toEndOf="@+id/viewerTextLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contentNumberTextLabel"
        android:id="@+id/contentNumbertextLabel"
        android:layout_below="@+id/viewerSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/contentNumnerTextBox"
        android:layout_below="@+id/viewerSpinner"
        android:layout_toEndOf="@+id/contentNumbertextLabel"
        android:layout_toRightOf="@+id/contentNumbertextLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewContentButtontextLabel"
        android:id="@+id/viewContentButton"
        android:layout_below="@+id/contentNumnerTextBox"
        android:layout_marginTop="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/viewerSpinner"
        android:layout_alignEnd="@+id/viewerSpinner" />

    <Button
        android:id="@+id/viewContentStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewContentButton"
        android:layout_alignEnd="@+id/viewerSpinner"
        android:layout_alignRight="@+id/viewerSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/viewContentStatsButtonLabel"
        android:visibility="gone"
        tools:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/errorMessageLabel"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_below="@+id/viewContentStatusButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>